runtime/native/libxpu_rt/include/xpu_rt/xpu_rt.h

/* ------------------------------------------------------------------ */
/* Status codes                                                        */
/* ------------------------------------------------------------------ */

typedef int32_t cg_rt_status_t;
#define CG_RT_OK                     0
typedef struct cg_rt_device         cg_rt_device_t;
typedef struct cg_rt_buffer         cg_rt_buffer_t;
typedef struct cg_rt_command_buffer cg_rt_command_buffer_t;
typedef struct cg_rt_executable     cg_rt_executable_t;
typedef struct cg_rt_event_tensor   cg_rt_event_tensor_t;
cg_rt_status_t cg_rt_command_buffer_fill(cg_rt_command_buffer_t *command_buffer,
                                         cg_rt_buffer_t         *dst,
                                         size_t                  dst_offset,
                                         size_t                  size_bytes,
                                         uint32_t                pattern);
cg_rt_status_t cg_rt_command_buffer_dispatch(cg_rt_command_buffer_t *command_buffer,
                                             cg_rt_executable_t     *executable,
                                             const void             *push_constants,
                                             size_t                  pc_size,
                                             cg_rt_buffer_t        **bindings,
                                             size_t                  n_bindings);
cg_rt_status_t cg_rt_command_buffer_barrier(cg_rt_command_buffer_t *command_buffer);
/* ------------------------------------------------------------------ */
/* Queue submission                                                    */
/* ------------------------------------------------------------------ */

typedef struct {
    cg_rt_semaphore_t *semaphore;
    uint64_t           value;
} cg_rt_semaphore_point_t;
/*
 * Submit a command buffer on a device queue. Blocks the queue worker
 * until all ``wait`` semaphores reach their target value, then executes
 * the command buffer, then signals all ``signal`` semaphores with their
 * respective values. On cpu_sync the entire call is synchronous — the
 * function returns only after execution completes.
 *
 * ``queue_index`` selects among ``traits.max_concurrent_queues``.
 */
cg_rt_status_t cg_rt_queue_submit(cg_rt_device_t               *device,
                                  uint32_t                      queue_index,
                                  const cg_rt_semaphore_point_t *wait,
                                  size_t                        n_wait,
                                  const cg_rt_semaphore_point_t *signal,
                                  size_t                        n_signal,
                                  cg_rt_command_buffer_t       *command_buffer);
/* ------------------------------------------------------------------ */
/* Event tensors (paper support)                                       */
/* ------------------------------------------------------------------ */

typedef enum {
    CG_RT_EVENT_DTYPE_I32 = 1,
    CG_RT_EVENT_DTYPE_I64 = 2,
} cg_rt_event_dtype_t;
cg_rt_status_t cg_rt_event_tensor_create(cg_rt_device_t        *device,
                                         size_t                 rank,
                                         const int64_t         *shape,
                                         cg_rt_event_dtype_t    dtype,
                                         int64_t                initial_value,
                                         cg_rt_event_tensor_t **out_event_tensor);
void cg_rt_event_tensor_destroy(cg_rt_event_tensor_t *event_tensor);
size_t cg_rt_event_tensor_num_cells(const cg_rt_event_tensor_t *event_tensor);
/*
 * Atomic notify: decrement the counter at ``linear_idx`` by
 * ``decrement``.  When the counter reaches zero (or below) any blocked
 * waiters on that cell are released.
 */
cg_rt_status_t cg_rt_event_tensor_notify(cg_rt_event_tensor_t *event_tensor,
                                         size_t                linear_idx,
                                         int64_t               decrement);
cg_rt_status_t cg_rt_event_tensor_wait(cg_rt_event_tensor_t *event_tensor,
                                       size_t                linear_idx,
                                       uint64_t              timeout_ns);
cg_rt_status_t cg_rt_event_tensor_query(cg_rt_event_tensor_t *event_tensor,
                                        size_t                linear_idx,
                                        int64_t              *out_value);
cg_rt_status_t cg_rt_event_tensor_reset(cg_rt_event_tensor_t *event_tensor,
                                        int64_t               value);