xpu-rt/python/xpu_rt/runtime/native/library.py


    lib.cg_rt_command_buffer_fill.argtypes = [
        ctypes.c_void_p,
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.c_size_t,
        ctypes.c_uint32,
    ]
    lib.cg_rt_command_buffer_fill.restype = ctypes.c_int32

    lib.cg_rt_command_buffer_dispatch.argtypes = [
        ctypes.c_void_p,
        ctypes.c_void_p,
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_void_p),
        ctypes.c_size_t,
    ]
    lib.cg_rt_command_buffer_dispatch.restype = ctypes.c_int32

    lib.cg_rt_command_buffer_barrier.argtypes = [ctypes.c_void_p]
    lib.cg_rt_command_buffer_barrier.restype = ctypes.c_int32

    lib.cg_rt_queue_submit.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint32,
        ctypes.POINTER(SemaphorePointStruct),
        ctypes.c_size_t,
        ctypes.POINTER(SemaphorePointStruct),
        ctypes.c_size_t,
        ctypes.c_void_p,
    ]
    lib.cg_rt_queue_submit.restype = ctypes.c_int32

    # event tensors
    lib.cg_rt_event_tensor_create.argtypes = [
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_int64),
        ctypes.c_int,
        ctypes.c_int64,
        ctypes.POINTER(ctypes.c_void_p),
    ]
    lib.cg_rt_event_tensor_create.restype = ctypes.c_int32

    lib.cg_rt_event_tensor_destroy.argtypes = [ctypes.c_void_p]
    lib.cg_rt_event_tensor_destroy.restype = None

    lib.cg_rt_event_tensor_num_cells.argtypes = [ctypes.c_void_p]
    lib.cg_rt_event_tensor_num_cells.restype = ctypes.c_size_t

    lib.cg_rt_event_tensor_notify.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_int64]
    lib.cg_rt_event_tensor_notify.restype = ctypes.c_int32

    lib.cg_rt_event_tensor_wait.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint64]
    lib.cg_rt_event_tensor_wait.restype = ctypes.c_int32

    lib.cg_rt_event_tensor_query.argtypes = [
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_int64),
    ]
    lib.cg_rt_event_tensor_query.restype = ctypes.c_int32

    lib.cg_rt_event_tensor_reset.argtypes = [ctypes.c_void_p, ctypes.c_int64]
    lib.cg_rt_event_tensor_reset.restype = ctypes.c_int32


def check(status: int, what: str) -> None:
    """Raise :class:`CgRtError` on any non-zero status."""
    if status != CG_RT_OK:
        raise CgRtError(status, what)
